Refactoring quick quote screen

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -224,3 +224,16 @@ select#quote-input option {
   white-space: nowrap;
 }
 
+.dynamic-fields-form {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: 100%;
+}
+
+.dynamic-field {
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-right: 15px;
+}
